--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -81,6 +81,13 @@
             android:key="pref_enter_to_send"
             android:summary="@string/pref_summary_enter_to_sent"
             android:title="@string/pref_title_enter_to_send" />
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="pref_notification_color"
+            android:title="@string/pref_title_notification_color"
+            android:summary="@string/pref_summary_notification_color"
+            android:defaultValue="@color/surespotBlue"
+            alphaSlider="true"
+        />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_suppress_voice_purchase_ask"
