Finish hookup to LED light, confirm it works with phone in standby (cool, you can set the color on a per-user (at least who the message is TO) basis...)

--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -86,7 +86,7 @@
             android:title="@string/pref_title_notification_color"
             android:summary="@string/pref_summary_notification_color"
             android:defaultValue="@color/surespotBlue"
-            alphaSlider="true"
+            alphaSlider="false"
         />
         <CheckBoxPreference
             android:defaultValue="false"
