--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -88,11 +88,11 @@
             android:defaultValue="@color/surespotBlue"
             alphaSlider="false"
         />
-        <!--<CheckBoxPreference-->
-            <!--android:defaultValue="false"-->
-            <!--android:key="pref_suppress_voice_purchase_ask"-->
-            <!--android:summary="@string/pref_suppress_voice_purchase_ask_summary"-->
-            <!--android:title="@string/pref_suppress_voice_purchase_ask_title" />-->
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="pref_disable_voice"
+            android:summary="@string/pref_disable_voice"
+            android:title="@string/pref_disable_voice_title" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_debug_mode"
