--- a/surespot/src/main/res/layout/main_friend_item.xml
+++ b/surespot/src/main/res/layout/main_friend_item.xml
@@ -29,14 +29,7 @@
             android:visibility="gone" >
         </View>
 
-        <ImageView
-            android:id="@+id/friendAvatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:scaleType="centerCrop"
-            android:layout_gravity="left"
-            android:layout_marginRight="5dp" >
-        </ImageView>
+
 
         <TextView
             android:id="@+id/friendName"
@@ -44,8 +37,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
-            android:textSize="20sp" >
+            android:layout_marginLeft="10dp"
+            android:textSize="25sp" >
         </TextView>
+
+
 
         <FrameLayout
             android:layout_width="wrap_content"
@@ -72,6 +68,15 @@
                 android:visibility="gone" >
             </View>
         </FrameLayout>
+
+        <ImageView
+            android:id="@+id/friendAvatar"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:scaleType="centerCrop"
+            android:layout_gravity="right"
+            android:layout_marginLeft="5dp" >
+        </ImageView>
     </LinearLayout>
 
     <LinearLayout
