--- a/surespot/src/main/res/layout/friend_fragment.xml
+++ b/surespot/src/main/res/layout/friend_fragment.xml
@@ -4,16 +4,15 @@
     android:id="@+id/friendLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+              android:orientation="vertical">
 
     <ListView
         android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
+        android:drawSelectorOnTop="false"
         android:cacheColorHint="#00000000"
-        android:divider="@drawable/list_divider_holo_light"
-        android:overScrollFooter="@null" />
+        android:divider="@drawable/list_divider_holo_light"/>
 
     <ScrollView
         android:id="@+id/main_list_empty"
