--- a/surespot/src/main/res/layout/friend_fragment.xml
+++ b/surespot/src/main/res/layout/friend_fragment.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false"
-        android:cacheColorHint="#00000000"
-        android:divider="@drawable/list_divider_holo_light"/>
+        android:cacheColorHint="#00000000"/>
 
     <ScrollView
         android:id="@+id/main_list_empty"
