--- a/surespot/src/main/res/layout/activity_about.xml
+++ b/surespot/src/main/res/layout/activity_about.xml
@@ -11,6 +11,7 @@
     tools:context=".AboutActivity" >
 
     <ImageView
+        android:id="@+id/surespotLogo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
