--- a/surespot/src/main/res/xml/preferences.xml
+++ b/surespot/src/main/res/xml/preferences.xml
@@ -101,12 +101,12 @@
         <!--android:title="@string/pref_title_message_debug_mode"/>-->
     </PreferenceScreen>
     <PreferenceScreen android:title="@string/pref_title_global_options">
-        <CheckBoxPreference
-            android:defaultValue="true"
-            android:key="pref_black"
-            android:title="@string/black"
+        <!--<CheckBoxPreference-->
+            <!--android:defaultValue="true"-->
+            <!--android:key="pref_black"-->
+            <!--android:title="@string/black"-->
 
-            android:summary="@string/requires_force_stop"/>
+            <!--android:summary="@string/requires_force_stop"/>-->
         <CheckBoxPreference
             android:defaultValue="false"
             android:key="pref_enable_keystore_control"
