--- a/surespot/src/main/res/layout/message_list_item_them.xml
+++ b/surespot/src/main/res/layout/message_list_item_them.xml
@@ -72,7 +72,7 @@
                 android:textSize="10sp" />
         </LinearLayout>
 
-        <TextView
+        <com.rockerhieu.emojicon.EmojiconTextView
             android:id="@+id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
             android:autoLink="all"
             android:textSize="16sp"
             android:visibility="gone" >
-        </TextView>
+        </com.rockerhieu.emojicon.EmojiconTextView>
 
         <ImageView
             android:id="@+id/messageImage"
