--- a/surespot/src/main/res/layout/message_list_item_us.xml
+++ b/surespot/src/main/res/layout/message_list_item_us.xml
@@ -81,7 +81,7 @@
                 android:textSize="10sp" />
         </LinearLayout>
 
-        <TextView
+        <com.rockerhieu.emojicon.EmojiconTextView
             android:id="@+id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
