--- a/surespot/src/main/res/layout/message_list_item_them.xml
+++ b/surespot/src/main/res/layout/message_list_item_them.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     android:descendantFocusability="blocksDescendants"
     android:gravity="left"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <!-- <TextView -->
     <!-- android:id="@+id/messageUser" -->
@@ -80,6 +81,7 @@
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="55dp"
+            emojicon:emojiconSize="30dp"
             android:autoLink="all"
             android:textSize="16sp"
             android:visibility="gone" >
