--- a/surespot/src/main/res/layout/message_list_item_us.xml
+++ b/surespot/src/main/res/layout/message_list_item_us.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     android:descendantFocusability="blocksDescendants"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <!-- <TextView -->
     <!-- android:id="@+id/messageUser" -->
@@ -89,6 +90,7 @@
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="55dp"
+            emojicon:emojiconSize="30dp"
             android:autoLink="all"
             android:textSize="16sp"
             android:visibility="gone" />
